Updated the content height in order to avoid the scrollbar to always be present.

--- a/code/web/basis/src/main/resources/META-INF/resources/resources/css/main-stylesheet.scss
+++ b/code/web/basis/src/main/resources/META-INF/resources/resources/css/main-stylesheet.scss
@@ -95,7 +95,7 @@ body {
 
 .container {
     width: 85%;
-    height: 80%;
+    height: 75%;
     margin: 0 auto;
     margin-top: 40px;
     padding-top: 50px;
